--- a/app/globals.css
+++ b/app/globals.css
@@ -43,3 +43,12 @@ svg {
   }
 }
 
+
+.ql-toolbar.ql-snow + .ql-container.ql-snow{
+  min-height: 60px;
+}
+
+/* .ql-snow .ql-picker.ql-header {
+
+  color: white;
+} */
